--- a/homepage/shop.html
+++ b/homepage/shop.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/poster.css">
+  <link rel="stylesheet" href="css/shop.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
   <script src="js/navToggle.js"></script>
@@ -52,27 +53,29 @@
       <a href="shop.html" class="active">ショップ</a>
     </nav>
 
-    <section id="home">
-      <h2>新着情報</h2>
-      <p>● 公式LINE限定情報公開中！</p>
-      <a href="https://lin.ee/kjGqf6D">● 公式LINE登場</a>
-      <p>● 劇団公式HPを開設</p>
-      <div class="poster-gallery">
-        <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
-        <img src="images/Otonanaraotonadakaraotonademo_poster.png" alt="最新公演ポスター2" class="poster-img">
+    <section id="shop">
+      <h2>ショップ</h2>
+      <div class="product-grid">
+
+      <div class="product-card">
+        <img src="images/millefeuille.jpg" alt="otonanara-video" class="product-image">
+        <div class="product-info">
+          <h3 class="product-name">【本番映像】大人なら、大人だから、大人でも。</h3>
+          <p class="product-price">¥700 (税込)</p>
+          <a href="nopage.html" class="buy-button">購入する</a>
+        </div>
       </div>
 
-      <!-- モーダル（拡大表示用） -->
-      <div id="lightbox" class="lightbox">
-        <span class="close">&times;</span>
-        <img class="lightbox-content" id="lightboxImg">
+      <div class="product-card sold-out">
+        <img src="images/millefeuille.jpg" alt="T-shirts" class="product-image">
+        <div class="product-info">
+          <h3 class="product-name">劇団つぎはぎ オリジナルTシャツ</h3>
+          <p class="product-price">¥1,500 (税込)</p>
+          <p class="sold-out-text">SOLD OUT</p>
+        </div>
       </div>
-    </section>
-
-    <section>
-      <h2>旗揚げ公演映像、販売中！</h2>
-      <p>公式LINEにて、旗揚げ公演「大人なら、大人だから、大人でも。」本番映像を販売しています。</p>
-      <a href="https://lin.ee/kjGqf6D">公式LINE登録はこちら</a>
+      
+      </div>
     </section>
 
     <footer>
